# picobuild

./: Makefile  README.md  pyproject.toml  setup.py
src/picobuild/: __init__.py  cython_utils.py
