[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picobuild"
description = "Building tools for CPython extensions"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "ckirua", email = "aquipongoalgo.dsz@gmail.com" }]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "setuptools>=80.9.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"picobuild" = ["**/*.pyx", "**/*.pxd", "**/*.pyi", "**/*.pxi", "**/*.h", "**/*.c", "**/*.hpp", "**/*.cpp"]

[tool.setuptools.dynamic]
version = { attr = "picobuild.__about__.__version__" }